# liveplots

./: .coverage  .directory  .gitignore  .hgignore  .pre-commit-config.yaml  .project  .pydevproject  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
.pythoscope/: project.pickle
.pythoscope/code-trees/: src_graphserver_xmlrpc.py.pickle  src_setup.py.pickle  tests_test_src_graphserver_xmlrpc.py.pickle
Examples/: monitor.py  simple.py
cover/: index.html  liveplots.filemonitor.html  liveplots.html  liveplots.xmlrpcserver.html
docs/: Makefile  conf.py  index.md  index.rst  make.bat  tutorial.md  tutorial.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/api/: monitor.md  plotter.md  server.md
examples/: demo.py  monitor.py  simple.py
liveplots/: liveplot.py  xmlrpcserver.py
liveplots/tests/: test_xmlrpcserver.py
scripts/: generate_images.py
src/: ez_setup.py  setup.py
src/graphserver/: xmlrpc.py  xmlrpcserver.py
src/liveplots/: .directory  __init__.py  __main__.py  filemonitor.py  liveplot.py  monitor.py  plotter.py  server.py  xmlrpcserver.py
src/liveplots/.pythoscope/: project.pickle
src/liveplots/.pythoscope/code-trees/: filemonitor.py.pickle  tests_test_filemonitor.py.pickle  tests_test_xmlrpcserver.py.pickle  xmlrpcserver.py.pickle
src/liveplots/tests/: test_filemonitor.py  test_xmlrpcserver.py
src/plotserver/: xmlrpcserver.py
tests/: conftest.py  test_monitor.py  test_plotter.py  test_server.py  test_src_graphserver_xmlrpc.py
