[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liveplots"
version = "2.0.0"
description = "Real-time live plot server using ZeroMQ and Gnuplot"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com" },
]
keywords = ["plotting", "real-time", "gnuplot", "zeromq", "zmq", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.26",
    "watchdog>=4.0",
    "pyzmq>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://github.com/fccoelho/liveplots"
Repository = "https://github.com/fccoelho/liveplots"
Issues = "https://github.com/fccoelho/liveplots/issues"

[project.scripts]
liveplots = "liveplots.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/liveplots"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/liveplots"]

[tool.coverage.report]
show_missing = true
